--- a/templates/subjects/biology.html
+++ b/templates/subjects/biology.html
@@ -7,6 +7,8 @@
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
 
+    /* place notes here */
+
     <script>
 
     </script>
